--- a/CSS/login.css
+++ b/CSS/login.css
@@ -326,3 +326,25 @@ img.avatar {
     margin-top: 25px;
     margin-right: 15px;
 }
+.Clock{
+	width: 33%;
+	margin-left: 30%;
+	margin-right: 30%;
+}
+.ClockLabel{
+	margin-top:1em;
+	margin-left:5px;
+	float:left;
+	clear:left;
+}
+.ClockInput{
+	margin-top:1em;
+	margin-right:5px;
+	float:right;
+	clear:right;
+}
+.ClockBtn{
+	margin-top:1.5em;
+	clear:left;
+	float:left;
+}
