--- a/view/css/style.css
+++ b/view/css/style.css
@@ -18,9 +18,7 @@
 --------------------------*/
 
 #clock {
-    width: 370px;
     padding: 40px;
-    margin: 200px auto 60px;
     position: relative;
 }
 
@@ -41,7 +39,6 @@
     padding: 40px 20px 20px;
     border-radius: 6px;
     position: relative;
-    height: 54px;
 }
 
 
@@ -70,12 +67,12 @@
 }
 
 #clock.light .alarm {
-    background: url('../img/alarm_light.jpg');
+    /* background: url('../img/alarm_light.jpg');*/
 }
 
 #clock.light .display {
-    background-color: #dddddd;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08) inset, 0 1px 1px #fafafa;
+    /* background-color: #dddddd;*/
+    /* box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08) inset, 0 1px 1px #fafafa;*/
 }
 
 
@@ -410,7 +407,8 @@
 	The Alarm
 --------------------------*/
 
-#clock .alarm {
+
+/*#clock .alarm {
     width: 16px;
     height: 16px;
     bottom: 20px;
@@ -421,7 +419,7 @@
 
 #clock .alarm.active {
     opacity: 1;
-}
+}*/
 
 
 /*-------------------------
@@ -438,12 +436,13 @@
 }
 
 #clock .weekdays span {
-    opacity: 0.2;
+    opacity: 1;
     padding: 0 10px;
 }
 
 #clock .weekdays span.active {
     opacity: 1;
+    color: yellow;
 }
 
 
