Final semester merge

--- a/CSS/abtquoteboot.css
+++ b/CSS/abtquoteboot.css
@@ -586,6 +586,11 @@ table {
 th:first-child {
     vertical-align: bottom;
 }
-p.bold{
-	font-weight: 400;
+
+p.bold {
+    font-weight: 400;
+}
+
+#contactUsText {
+    font-size: 125%;
 }
